refactor(roadsystem): do not distinct between entry and exit lane count